--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,14 @@
     margin: 0;
     box-sizing: inherit;
 }
+
+#doubleBox {
+    display:flex;
+    justify-content: space-between;
+}
+
+#image {
+    max-width: 200px;
+    max-height: 250px;
+    justify-content: space-between;
+}
